--- a/src/css/typography/typography.css
+++ b/src/css/typography/typography.css
@@ -78,6 +78,10 @@ h6, .h6 {
   font-weight: 500;
 }
 
+.fw600 {
+  font-weight: 600;
+}
+
 .main h2:first-child,
 .main h3:first-child  {
   margin-top: 0;
