--- a/src/css/typography/header1.css
+++ b/src/css/typography/header1.css
@@ -1,6 +1,7 @@
 .header1 {
     margin: 0 auto 4em;
     padding-top: 4em;
+    padding-bottom: 2.5em;
     position: relative;
 }
 
@@ -29,7 +30,7 @@
 .header1 h3 {
     font-weight: 400;
     font-size: 1.25rem;
-    margin: 1em auto 2em;
+    margin: .5em auto 0;
     display: table;
 }
 
