--- a/src/css/modules/hero.css
+++ b/src/css/modules/hero.css
@@ -5,7 +5,7 @@
 
 .heroVideo--home {
     @mixin respond-min $large {
-        position: fixed;
+        /* position: fixed; */
         margin-top: -154px;
     }
 }
