--- a/src/templates/pages/random.hbs
+++ b/src/templates/pages/random.hbs
@@ -109,4 +109,65 @@ pageTitle: Admissions Routing
 
     </section>
 
+    <div class="inner">
+            <div class="grid">
+                <div class="grid-cell  outlineBox">
+                    <div class="grid-pad-3x">
+                        <h4>Outline Box Title</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur impedit neque sed minima aut ea doloremque reiciendis voluptatum? Doloribus, optio!</p>
+                        <p><a href="#" class="btn-outline">Freshmen</a></p>
+
+                    </div>
+                </div>
+
+                <div class="grid-cell  outlineBox">
+                    <div class="grid-pad-3x">
+                        <h4>Outline Box Title</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur impedit neque sed minima aut ea doloremque reiciendis voluptatum? Doloribus, optio!</p>
+                        <p><a href="#" class="btn-outline">Freshmen</a></p>
+
+                    </div>
+                    </div>
+
+                    <div class="grid-cell  outlineBox">
+                    <div class="grid-pad-3x">
+                        <h4>Outline Box Title</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur impedit neque sed minima aut ea doloremque reiciendis voluptatum? Doloribus, optio!</p>
+                        <p><a href="#" class="btn-outline">Freshmen</a></p>
+
+                    </div>
+                </div>
+            </div>
+    </div>
+
+        <div class="inner">
+            <div class="grid  mb6">
+                <div class="grid-cell  outlineBox">
+                    <div class="grid-pad-3x">
+                        <h4>Outline Box Title</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur impedit neque sed minima aut ea doloremque reiciendis voluptatum? Doloribus, optio!</p>
+                        <a href="#" class="btn-outline">Freshmen</a>
+
+                    </div>
+                </div>
+
+                <div class="grid-cell  outlineBox">
+                    <div class="grid-pad-3x">
+                        <h4>Outline Box Title</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur impedit neque sed minima aut ea doloremque reiciendis voluptatum? Doloribus, optio!</p>
+                        <a href="#" class="btn-outline">Freshmen</a>
+
+                    </div>
+                    </div>
+
+                    <div class="grid-cell  outlineBox">
+                    <div class="grid-pad-3x">
+                        <h4>Outline Box Title</h4>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur impedit neque sed minima aut ea doloremque reiciendis voluptatum? Doloribus, optio!</p>
+                        <a href="#" class="btn-outline">Freshmen</a>
+
+                    </div>
+                </div>
+            </div>
+    </div>
 </div>
