--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -4,7 +4,7 @@
 		<div class="medium-grid-pad-1x">
 
 
-						<h2 class="h1  mb1  center  fw450  titleBorder">Find your major or program</h2>
+						<h2 class="mb1  center">Find your major or program</h2>
 						<p class="h4  mb2  mb3--medium  fw400">We offer more than 100 areas of study for undergrads, as well as programs for adult undergrad, graduate, and seminary students. Enter a career or area of interest to find and compare majors, programs, certificates, and licenses.</p>
 
 
