--- a/src/css/base/utils.css
+++ b/src/css/base/utils.css
@@ -15,13 +15,32 @@
 .bkg--white { background-color: #fff; }
 .bkg--light-gray { background-color: #eee; }
 .bkg--blue { background-color: $bethel--blue; }
+.bkg--light-blue { background-color: #eff8ff; }
 .bkg--navy { background-color: $bethel--navy; }
 .bkg--yellow { background-color: $bethel--yellow; }
+.bkg--light-yellow { background-color: #fffff1;}
 .bkg--gradient-blue-yellow { background: linear-gradient(-150deg, $bethel--blue, 70%, $bethel--yellow); }
-
 $bkg--gradient-blue-yellow: linear-gradient(-150deg, $bethel--blue, 70%, $bethel--yellow);
-
 .bkg--gradient-navy-blue { background: linear-gradient(-150deg, $bethel--navy, $bethel--blue); }
+
+
+.vh50 {
+	@mixin respond-min $medium {
+		height: 50vh;
+	}
+}
+
+.vh60 {
+	@mixin respond-min $medium {
+		height: 60vh;
+	}
+}
+
+.vh70 {
+	@mixin respond-min $medium {
+		height: 70vh;
+	}
+}
 
 .vh100 {
 	@mixin respond-min $medium {
