--- a/src/css/post.css
+++ b/src/css/post.css
@@ -43,6 +43,7 @@
 @import "modules/news.css";
 @import "modules/events.css";
 @import "modules/moving-picture.css";
+@import "modules/outlineBox.css";
 @import "modules/program-search.css";
 @import "modules/pull-quote.css";
 @import "modules/routing.css";
