--- a/src/css/grid/sectionSplit.css
+++ b/src/css/grid/sectionSplit.css
@@ -10,7 +10,21 @@
 .sectionSplit--imgLeft > .grid-cell:nth-child(1),
 .sectionSplit--imgRight > .grid-cell:nth-child(1){
     min-height: 25em;
-    /* height: 100%; */
+ 
+    @mixin respond-min $medium {
+        min-height: auto;
+    }
+}
+
+/* Cascade flex layout automatically puts in a 'grid-pad' class
+This is to ensure the height of the pad is 100% and the object-fit works */
+
+.sectionSplit--imgRight div[class*="pad"],
+.sectionSplit--imgLeft div[class*="pad"] {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .sectionSplit--imgLeft > .grid-cell:nth-child(1) img,
@@ -26,7 +40,5 @@
     max-width: 500px; 
     margin: 0 auto;
     padding: 4em 2em;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+
 }
