changing bkg to white

--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -12,18 +12,16 @@
 
 		{{> global__header }}
 
-		{{!-- {{> school__navigation }} --}}
-
-		{{!-- {{> section--apply }} --}}
-
-		    	{{!-- {{> site__navigation }} --}}
+		{{> school__navigation }}
 
 
-		        {{!-- {{> page__title }} --}}
+		    	{{> site__navigation }}
+
+
+		        {{> page__title }}
 
 				{% body %}
 
-				{{!-- {{> section--home__academics }} --}}
 
 		{{> global__footer }}
 
