--- a/src/css/enhance/accordion.css
+++ b/src/css/enhance/accordion.css
@@ -53,7 +53,7 @@ a.accordion-list__link {
 .accordion-list__button {
     min-width: 1em;
     border: none;
-    background: #fff;
+    background: #f5f5f5;
     margin: 0 .75em;
     line-height: 1;
     padding: 0;
