--- a/src/css/school/school__navigation.css
+++ b/src/css/school/school__navigation.css
@@ -1,5 +1,5 @@
 .school__navigation {
-    background: #fff;
+    background: #f5f5f5;
     margin: 0;
     padding: 1em .5em;
     border-bottom: 1px solid #ccc;
